modification de l'HTML

--- a/public/HTML/homePage.html
+++ b/public/HTML/homePage.html
@@ -6,7 +6,7 @@
 
     <!-- Link -->
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-     <link rel="stylesheet" href="/CSS/style.css">
+     <link rel="stylesheet" href="/public/CSS/style.css">
 
     <title>Accueil</title>
 </head>
@@ -15,7 +15,7 @@
         <!-- Elements Left (logo/link) -->
         <div class="d-flex flex-row justify-content-center align-items-center">
             <span class="d-flex align-items-center">
-                <img id="logo" src="/ASSET/img/Sans titre (Logo).svg" alt="Logo Ava Moon Nails">
+                <img id="logo" src="/public/ASSET/img/Sans titre (Logo).svg" alt="Logo Ava Moon Nails">
             </span>
             <div>
                 <ul class="d-flex flex-row gap-4 mb-0 align-items-center">
