--- a/public/HTML/homePage.html
+++ b/public/HTML/homePage.html
@@ -22,7 +22,7 @@
                     <li><a href="">Accueil</a></li>
                     <li><a href="">Planning</a></li>
                     <li><a href="">Messagerie</a></li>
-                    <li><a href="">Document</a><a href=""></a></li>
+                    <li><a href="">Document</a><a href="">s</a></li>
                     <li><a href="">Salariés</a></li>
                 </ul>
             </div> 
